Added 'Why Should I Learn D3?'

--- a/index.html
+++ b/index.html
@@ -53,11 +53,20 @@
 						<!-- Insert sankey diagram -->
 					</section>
 					<section>
-						<p>
+						<p>World Maps </p>
+						<!-- Insert World Map diagram here -->
 					</section>
 				</section>
 				<section style="text-align:left;">
-					<p><u>When should I use D3?</u><br />
+					<h2>Why should I learn D3?</h2>
+					<ul>
+						<li>Researchers are interested in displaying data in their papers and journals.</li>
+						<li>Corporate institutions often want to display interactive data on their websites.</li>
+						<li>Data Scientists need to be able to communicate their data to their clients/stakeholders.</li>
+					</li>
+				</section>
+				<section style="text-align:left;">
+					<p><u>When should I use D3 over other libraries?</u><br />
 					<span class="fragment">When you want the <strong>most</strong> customisation options.</span> <br /><br />
 
 					<span class="fragment"><u>I don't need all of these options/I want something simpler!</u></span> <br />
@@ -67,7 +76,6 @@
 						<li class="fragment">plot.ly - also has libraries for Python, R, MATLAB, Excel</li>
 					</ul>
 					</p>
-
 				</section>
 
 				<section>
