Couple more edits to 'Why should I use D3?'

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 					<ul>
 						<li>Researchers are interested in displaying data in their papers and journals.</li>
 						<li>Corporate institutions often want to display interactive data on their websites.</li>
-						<li>Data Scientists need to be able to communicate their data to their clients/stakeholders.</li>
+						<li>Data scientists need to be able to communicate their data to their clients/stakeholders.</li>
 					</li>
+					</ul>
+					<p>As web devs, chances are you'll need to interact with one or more of such professionals depending on the organisation you work for.</p>
 				</section>
 				<section style="text-align:left;">
 					<p><u>When should I use D3 over other libraries?</u><br />
