Added 'Advantages of D3' slide - still need to google/write more content.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 					</ul>
 					<p>As web devs, chances are you'll need to interact with one or more of such professionals depending on the organisation you work for.</p>
 				</section>
+				<section>
+					<h2>What advantages does D3 offer?</h2>
+					<ul>
+						<li></li>
+					</ul>
+				</section>
 				<section style="text-align:left;">
 					<p><u>When should I use D3 over other libraries?</u><br />
 					<span class="fragment">When you want the <strong>most</strong> customisation options.</span> <br /><br />
@@ -79,6 +85,7 @@
 					</ul>
 					</p>
 				</section>
+
 
 				<section>
 					<p>Let's say I want to make a bar chart.</p>
