Added more dot points to Personal Comments slide

--- a/index.html
+++ b/index.html
@@ -85,8 +85,6 @@
 					</ul>
 					</p>
 				</section>
-
-
 				<section>
 					<p>Let's say I want to make a bar chart.</p>
 					<p class="fragment">Here's some data! <br /> [3, 1, 4, 1, 5, 2, 9]</p>
@@ -109,8 +107,14 @@ for(i=0; i <= data.length; i++) {
 				<section>
 					<h2>Personal Comments</h2>
 					<ul>
-						<li>Steep learning curve.</li>
-						<li>Best learned by forking an existing example and modifying to suit.</li>
+						<li class="fragment">Steep learning curve.</li>
+						<li class="fragment">Best learned by forking an existing example and modifying to suit.</li>
+						<li class="fragment">Recomended Starting Tutorials:
+							<ul>
+								<li class="fragment">Let's Make A Bar Chart - by the author of D3</li>
+								<li class="fragment">DashingD3Tutorials</li>
+							</ul>
+						</li>
 					</ul>
 				</section>
 			</div>
