Adjusted 'When should i use D3 over other libraries?' slide - changed fragment points.

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 				</section>
 				<section style="text-align:left;">
 					<p><u>When should I use D3 over other libraries?</u><br />
-					<span class="fragment">When you want the <strong>most</strong> customisation options.</span> <br /><br />
+					When you want the <strong>most</strong> customisation options.</p> <br />
 
-					<span class="fragment"><u>I don't need all of these options/I want something simpler!</u></span> <br />
-					<p class="fragment">'Out-of-the-box' solutions - just attach your data, tweak a few options and you're good to go!</p> 
-					<ul>
-						<li class="fragment">chart.js</li>
-						<li class="fragment">plot.ly - also has libraries for Python, R, MATLAB, Excel</li>
+					<p class="fragment"><u>I don't need all of these options/I want something simpler!</u></span> <br />
+					'Out-of-the-box' solutions - just attach your data, tweak a few options and you're good to go!
+					<ul class="fragment">
+						<li>chart.js</li>
+						<li>plot.ly - also has libraries for Python, R, MATLAB, Excel</li>
 					</ul>
 					</p>
 				</section>
