--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
+		<!-- D3.js charts styles -->
+		<style>
+		.axis path,
+		.axis line {
+		  fill: none;
+		  stroke: #FFF;
+		  shape-rendering: crispEdges;
+		}
+
+		.bar {
+		  fill: orange;
+		}
+
+		.bar:hover {
+		  fill: orangered;
+		}
+
+		.x.axis path {
+		  display: none;
+		}
+		</style>
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -20,9 +41,11 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
-		<script href="js/d3.min.js"></script>
+		
 	</head>
 	<body>
+
+	<script src="js/d3.min.js"></script>
 		<div class="reveal">
 			<div class="slides">
 				<section>
@@ -30,9 +53,13 @@
 					<h2>Data-Driven Documents</h2>
 					<h3>d3js.org</h3>
 				</section>
-				<section>
+				<section style="text-align:left;">
 					<h2>What is D3?</h2>
 					<p class="fragment">D3 is a Javascript library for manipulating documents based on data.</p>
+					<ul>
+						<li class="fragment"><em>Most</em> robust library</li>
+						<li class="fragment">Simpler alternatives: Chart.js, plot.ly</li>
+					</ul>
 				</section>
 				<section>
 					<section>
@@ -41,6 +68,7 @@
 					<section>
 						<p>Of course, your usual bar chart...</p>
 						<!-- Insert bar chart here -->
+						<div id="barchart" style="font: 10px sans-serif; color: white"></div>
 					</section>
 					<section>
 						<p>...and your scatterplots</p>
@@ -123,7 +151,7 @@ for(i=0; i <= data.length; i++) {
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
-
+		
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
@@ -138,5 +166,7 @@ for(i=0; i <= data.length; i++) {
 				]
 			});
 		</script>
+		<!-- D3.js Charts -->
+		<script src="js/barchart.js"></script>
 	</body>
 </html>
