Added additional dot point for 'What is D3'

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 					<h2>What is D3?</h2>
 					<p class="fragment">D3 is a Javascript library for manipulating documents based on data.</p>
 					<ul>
-						<li class="fragment"><em>Most</em> robust library</li>
-						<li class="fragment">Simpler alternatives: Chart.js, plot.ly</li>
+						<li class="fragment"><em>Most</em> robust library.</li>
+						<li class="fragment">Steep learning curve - tutorials + exercises recommended!</li>
+						<li class="fragment">Simpler alternatives: Chart.js, plot.ly.</li>
 					</ul>
 				</section>
 				<section>
@@ -101,18 +102,6 @@
 					<ul>
 						<li></li>
 					</ul>
-				</section>
-				<section style="text-align:left;">
-					<p><u>When should I use D3 over other libraries?</u><br />
-					When you want the <strong>most</strong> customisation options.</p> <br />
-
-					<p class="fragment"><u>I don't need all of these options/I want something simpler!</u></span> <br />
-					'Out-of-the-box' solutions - just attach your data, tweak a few options and you're good to go!
-					<ul class="fragment">
-						<li>chart.js</li>
-						<li>plot.ly - also has libraries for Python, R, MATLAB, Excel</li>
-					</ul>
-					</p>
 				</section>
 				<section>
 					<p>Let's say I want to make a bar chart.</p>
