Adjusted Example slides

--- a/index.html
+++ b/index.html
@@ -63,27 +63,21 @@
 					</ul>
 				</section>
 				<section>
-					<section>
-						<h2>So what can I make with it?</h2>
-					</section>
-					<section>
-						<p>Of course, your usual bar chart...</p>
+					<section style="text-align:left;">
+					<h3>Example: Bar Chart</h3>
 						<!-- Insert bar chart here -->
 						<div id="barchart" style="font: 10px sans-serif; color: white"></div>
 					</section>
 					<section>
-						<p>...and your scatterplots</p>
+						<h3>Example: Scatterplots</h3>
 						<!-- Insert scatterplot here -->
 					</section>
 					<section>
-						<h2>Now onto the fancy stuff.</h2>
-					</section>
-					<section>
-						<p>Sankey Diagrams</p>
+						<h3>Example: Sankey Diagram</h3>
 						<!-- Insert sankey diagram -->
 					</section>
 					<section>
-						<p>World Maps </p>
+						<h3>Example: Interactive World Map</h3>
 						<!-- Insert World Map diagram here -->
 					</section>
 				</section>
