Depreciated 'Personal Comments' section, moved to 'What is D3'

--- a/index.html
+++ b/index.html
@@ -55,28 +55,33 @@
 				</section>
 				<section style="text-align:left;">
 					<h2>What is D3?</h2>
-					<p class="fragment">D3 is a Javascript library for manipulating documents based on data.</p>
+					<p class="fragment">D3 is a Javascript library for manipulating documents based on data</p>
 					<ul>
 						<li class="fragment"><em>Most</em> robust library.</li>
-						<li class="fragment">Steep learning curve - tutorials + exercises recommended!</li>
+						<li class="fragment">Steep learning curve - tutorials + exercises recommended!
+							<ul class="fragment">
+								<li>DashingD3Tutorials.</li>
+								<li>Let's Make A Bar Chart.</li>
+							</ul>
+						</li>
 						<li class="fragment">Simpler alternatives: Chart.js, plot.ly.</li>
 					</ul>
 				</section>
 				<section>
 					<section style="text-align:left;">
-					<h3>Example: Bar Chart</h3>
+						<h3>Example: Bar Chart</h3>
 						<!-- Insert bar chart here -->
 						<div id="barchart" style="font: 10px sans-serif; color: white"></div>
 					</section>
-					<section>
+					<section style="text-align:left;">
 						<h3>Example: Scatterplots</h3>
 						<!-- Insert scatterplot here -->
 					</section>
-					<section>
+					<section style="text-align:left";>
 						<h3>Example: Sankey Diagram</h3>
 						<!-- Insert sankey diagram -->
 					</section>
-					<section>
+					<section style="text-align:left;">
 						<h3>Example: Interactive World Map</h3>
 						<!-- Insert World Map diagram here -->
 					</section>
@@ -114,20 +119,6 @@ for(i=0; i <= data.length; i++) {
 .append('div')
 .attr('width', function(d) {return d;})
 					</code></pre>
-				</section>
-
-				<section>
-					<h2>Personal Comments</h2>
-					<ul>
-						<li class="fragment">Steep learning curve.</li>
-						<li class="fragment">Best learned by forking an existing example and modifying to suit.</li>
-						<li class="fragment">Recomended Starting Tutorials:
-							<ul>
-								<li class="fragment">Let's Make A Bar Chart - by the author of D3</li>
-								<li class="fragment">DashingD3Tutorials</li>
-							</ul>
-						</li>
-					</ul>
 				</section>
 			</div>
 		</div>
